# iam0-core

./: Cargo.toml  README.md  openapi-spec.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: config.rs  crypto.rs  endpoints.rs  lib.rs
src/crypto/: csprng.rs  elliptic_curve.rs  mod.rs  schnorr.rs  token.rs
src/data/: id.rs
src/endpoints/: challenge.rs  commitment.rs  spec.rs
src/model/: client.rs  mod.rs  user.rs
src/model/store/: client_store.rs  mod.rs  user_store.rs
src/service/: mod.rs
src/store/: client_store.rs  error.rs  mod.rs  user_store.rs
