[package]
name = "iam0-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Data 
num-bigint = "0.4.5"
num-traits = "0.2.19"
rand_core = "0.9.0-alpha.1"
getrandom = "0.2"
digest = "0.10.7"
p256 = "0.13.2"
elliptic-curve = "0.13.8"
sha3 = "0.10.8"
base64 = "0.22.1"
aes-gcm = "0.10.3"
signature = "2.2.0"
cipher = "0.4.4"
aead = "0.5.2"
ecdsa = "0.16.9"
rand = "0.8.5"
