[package]
name = "iam0-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Data 
num-bigint = "0.4.5"
num-traits = "0.2.19"
getrandom = "0.2"
digest = "0.10.7"
p256 = { version = "0.13.2", features = ["serde"] }
elliptic-curve = "0.13.8"
base64 = "0.22.1"
aes-gcm = "0.10.3"
signature = "2.2.0"
cipher = "0.4.4"
aead = "0.5.2"
ecdsa = { version = "0.16.9", features = ["serde"] }
rand = "0.8.5"
sha2 = "0.10.8"
serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
hex = "0.4.3"

[dev-dependencies]
serde_json = "1"
